src/apps/CodeEditor/components/Editor/Editor.module.scss
@import '@/platform/_constants.scss';
@import '../../_constants.scss';

$lineNumbersWidth: 5rem;

ul.autoCompletionMenu {
  @include menu;

  min-width: 15rem;
  max-height: 12rem;
  margin-top: 1.7rem;
  margin-left: -0.7rem;

  mark {
    color: $primaryColor;
    background: transparent;
  }
}

.code {
  position: relative;
  flex: 1 1 100%;

  &::before {
    font-family: $fontFamily;
    font-size: $fontSize;
    line-height: $lineHeight;
    position: absolute;
    top: 0;
    left: calc(0.7rem + 80ch);
    height: 100%;
    content: '';
    border-right: 0.1rem solid #484848;
  }
}

.editor {
  position: absolute;
  top: $tabsHeight;
  right: 0;
  bottom: 0;
  left: $toolbarWidth;
  display: flex;
}

.graphicalObjects {
  z-index: 0;
}

.graphicalObjects,
.highlightedCode,
.textarea {
  @include scrollbar;

  font-family: $fontFamily;
  font-size: $fontSize;
  line-height: $lineHeight;
  position: absolute;
  top: 0;
  left: 0;
  overflow-y: auto;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 0.5rem 0.7rem;
  white-space: pre-wrap;
  border: none;
  outline: none;

  overflow-wrap: break-word;
}

.highlightedCode {
  z-index: 1;
}

.infoTooltip {
  font-family: $fontFamily;
  font-size: $fontSize;
  overflow: auto;
  padding: $spacingS;
  color: $textPrimaryColor;
  border: 0.1rem solid $borderColorPrimary;
  border-radius: $radiusS;
  background: $backgroundPrimaryColor;
}

.infoTooltipIssue {
  margin-bottom: $spacingM;
}

.lineNumbers {
  flex: 0 0 $lineNumbersWidth;
}

.textarea {
  z-index: 2;
  resize: none;
  color: transparent;
  background: transparent;

  caret-color: #f0f0f0;
}

